fixed youtube on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,9 +10,13 @@ body#index {
     background-color: #2b2b2b;
     height: 100vh;
     width: 100vw;
-    a {
+    iframe {
       position: absolute;
       z-index: 2;
+    }
+    a {
+      position: absolute;
+      z-index: 3;
       margin: 0;
       bottom: 0;
       text-decoration: none;
